Actualizar configuración de conexión a la base de datos y mejorar el manejo de correos electrónicos